@@ -163,6 +163,14 @@ screen reading keys with some additions.  The key assignments are:</p>
     <td width="50%" align="center">num pad 1</td>
     <td width="50%" align="center">read any buffered auto-read text</td>
   </tr>
+  <tr>
+    <td width="50%" align="center">alt + num pad 9</td>
+    <td width="50%" align="center">increase speech rate</td>
+  </tr>
+  <tr>
+    <td width="50%" align="center">alt + num pad 3</td>
+    <td width="50%" align="center">decrease speech rate</td>
+  </tr>
 </table>
 
 <p>If you are running JAWS you may find that it intercepts some of the key
@@ -172,10 +180,11 @@ interprets num pad 7 in the same way as 5.  The BeebEm key assignments will
 also work when num lock is switched on so you could try that as well.  You
 may be able to configure JAWS so it does not say the num pad key names.</p>
 
-<p>Under normal use you may find switching on the auto-read function useful
-(insert + num pad 1).  This will read text as it gets written to the BBC
-micro screen.  This works when using the BASIC command prompt and in many of
-the text based adventure games available for the BBC micro.</p>
+<p>Under normal use you may find the auto-read function useful so this is
+enabled by default (insert + num pad 1).  This will read text as it gets
+written to the BBC micro screen.  This works when using the BASIC command
+prompt and in many of the text based adventure games available for the BBC
+micro.</p>
 
 <p>As with the text view support the ALT + ` (back quote) key press is
 available to synchronise the speech cursor position with the BBC Micro
